--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "stripe/stripe-php": "^4.7"
+        "stripe/stripe-php": "^4.7",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
